Supporting branch folder naming

--- a/src/options.html
+++ b/src/options.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <link rel="stylesheet" href="options.css">
-    <script type="text/javascript" src="feature.js"></script>
+    <script type="text/javascript" src="branch.js"></script>
     <script type="text/javascript" src="options.js"></script>
 </head>
 <body>
