--- a/src/popup.html
+++ b/src/popup.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script type="text/javascript" src="feature.js"></script>
+        <script type="text/javascript" src="branch.js"></script>
         <script type="text/javascript" src="popup.js"></script>
         <link rel="stylesheet" type="text/css" href="popup.css">
     </head>
